# meu_tts

./: .gitignore  AGENTS.md  INTERFACE.md  README.md  chunker.py  components.json  config.py  desktop_bridge.py  docker-compose.yml  dockerfile  generate_audio.py  generate_speaker_ref.py  index.html  livro.md  main.py  md_to_text.py  merge_audio.py  package.json  pyproject.toml  server.py  test_voices.py  test_xtts.py  tsconfig.json  vite.config.ts
src/: App.tsx  DesktopApp.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/src/: bridge.rs  catalog.rs  main.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  scroll-area.tsx  select.tsx  slider.tsx  tabs.tsx
static/: script.js  style.css
templates/: index.html
