[package]
name = "meu-projeto-tts-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["io-util", "process", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }

